# cs3235-proj

bin_client/src/: main.rs
bin_nakamoto/src/: main.rs  nakamoto.rs
bin_wallet/src/: main.rs  wallet.rs
lib_chain/: Cargo.toml
lib_chain/src/: block.rs  lib.rs
lib_chain/testdata/: add_blocks_basic__1.json  add_blocks_basic__2.json  add_blocks_basic__3.json
lib_miner/: Cargo.toml
lib_miner/src/: miner.rs
lib_network/: Cargo.toml
lib_network/src/: netchannel.rs  p2pnetwork.rs
lib_tx_pool/src/: pool.rs
tests/_secrets/: Wallet.new.json
tests/cli_test_nakamoto/: BlockTree.json  cli_test_nakamoto_0.output  cli_test_nakamoto_0.output.expected  stdio.output  test.sh
tests/cli_test_wallet/: cli_test_wallet_0.output  stdio_no_neighbor.output
tests/nakamoto_config1_alone/: Config.json
